apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: homelab
spec:
  type: NodePort
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31003
